@@ -13,13 +13,20 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>13</version>
+            <version>17.0.14</version>
+            <classifier>mac-aarch64</classifier>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>13</version>
+            <version>17.0.14</version>
+            <classifier>mac-aarch64</classifier>
         </dependency>
+        <!-- <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>4.2.5</version> 
+        </dependency> -->
     </dependencies>
     <build>
         <plugins>
@@ -34,7 +41,7 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.6</version>
+                <version>0.0.8</version>
                 <executions>
                     <execution>
                         <!-- Default configuration for running -->
@@ -42,6 +49,10 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>com.example.App</mainClass>
+                        <jvmArgs>
+                            <jvmArg>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</jvmArg>
+                            <jvmArg>--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNAMED</jvmArg>
+                        </jvmArgs>
                         </configuration>
                     </execution>
                 </executions>
